# sirocco

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  main.cpp  package.json  test.http
.github/workflows/: test.yml
docs/: asset-manifest.json  index.html
docs/assets/: index-6Z6ch6uU.js  index-UKnNyrju.js
docs/static/css/: main.bfe3a7d8.chunk.css  main.bfe3a7d8.chunk.css.map
docs/static/js/: 2.ba614760.chunk.js  2.ba614760.chunk.js.map  2.c7a4158f.chunk.js  2.c7a4158f.chunk.js.map  2.e47df9a2.chunk.js  2.e47df9a2.chunk.js.map  main.05687da0.chunk.js  main.05687da0.chunk.js.map  main.3805ccb4.js  main.3805ccb4.js.map  main.7a536a8d.chunk.js  main.7a536a8d.chunk.js.map  runtime-main.3f1f9d77.js  runtime-main.3f1f9d77.js.map  runtime-main.4e1e7d07.js  runtime-main.4e1e7d07.js.map
src/server/: .env  actions.h  main.cpp  main.h
src/server/app/: main.cpp  main.h
src/server/apps/: comms.cpp  database.cpp  request.cpp  response.cpp  server.cpp  utils.cpp
src/server/data/: database.db
src/server/include/: actions.h  color.h  comm.h  comms.h  database.h  db_actions.h  http.h  json.h  request.cpp  request.h  response.h  server.cpp  server.h  sirocco.h  utils.cpp  utils.h
src/server/public/: database.json  index.html  style.css  test.db
src/tests/: read_env_file_test.cpp  read_file_test.cpp  split_test.cpp  stringify_map_test.cpp  stringify_vector_test.cpp
src/tests/mocks/: .env
src/www/: .env  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
src/www/docs/: index.html
src/www/docs/assets/: index-906b9293.js
src/www/public/: index.html
src/www/src/: App.svelte  atoms.ts  index.css  index.tsx  main.ts  main.tsx  theme.ts
src/www/src/app/: App.tsx  app.test.tsx
src/www/src/app/tests/: app.test.tsx
src/www/src/components/: Control.tsx  Footer.tsx  GlobalStyle.ts  Header.tsx  Logo.tsx
src/www/src/components/Footer/: Footer.tsx  footer.test.tsx
src/www/src/components/Footer/tests/: footer.test.tsx
src/www/src/components/Header/: Header.tsx  header.test.tsx
src/www/src/components/Header/tests/: header.test.tsx
src/www/src/components/Logo/: Control.tsx  Logo.tsx
